# advent-of-code

./: .clangd  CMakeLists.txt  README.md  conanfile.txt
2024/: CMakeLists.txt
2024/day2/: day2.cpp
2024/day3/: day3.cpp
src/: day1.cpp  day2.cpp  main.cpp
